--- a/registration.html
+++ b/registration.html
@@ -18,133 +18,136 @@
 </head>
 
 <body>
+    <!--[if lt IE 7]>
+      <p class="browsehappy"
+        >You are using an <strong>outdated</strong> browser. Please
+        <a href="#">upgrade your browser</a> to improve your experience.</p
+      >
+    <![endif]-->
 
     <!-- Top Navigation Menu -->
-    <nav class=" navbar navbar-expand-lg navbar-dark ">
-        <div class="container ">
-            <a class="navbar-brand " href="index.html ">WALKABOOKS</a>
-            <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarResponsive " aria-controls="navbarResponsive " aria-expanded="false " aria-label="Toggle navigation ">
-            <span class="navbar-toggler-icon "></span>
-          </button>
-            <div class="collapse navbar-collapse " id="navbarResponsive ">
-                <ul class="navbar-nav ml-auto ">
-                    <li class="nav-item ">
-                        <a class="nav-link " href="index.html ">Home
-                  <span class="sr-only ">(current)</span>
-                </a>
+
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="books.html ">Books</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="books.html">Books</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="about-us.html ">About Us</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="contact-us.html ">Contact Us</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " href="registration.html ">
-                            <i class="fa fa-user-circle " style="font-size: 32px "></i>
-                        </a>
+                        <a class="nav-link" href="registration.html"><i class="fa fa-user-circle" style="font-size: 32px"></i>Log In</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="cart.html ">
-                            <i class="fa fa-shopping-cart " style="font-size: 32px "></i
-                ><span id="cart-icon-count">0</span></a>
-              </li>
-            </ul>
-          </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" style="font-size: 32px"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!--Container for Registration & Log In-->
-    <div class="container row ml-auto mr-auto">
-
-           <!-- Banner -->
-           <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0 ">
-            <img src="images/banner.jpg " class="rounded w-100 " alt="Book banner "> 
-          </div>
-
+    <div class="d-flex m-5 p-5">
         <!--Register form-->
         <!---------------------------------------------------------------------------------------------->
-        <div class="col-lg-6 col-sm-12 ">
-            <h3 class="font-weight-bold " style="padding-top: 30px;">Register</h3>
-
-            <form class="p-top-2 " action=" " name="registration " style="padding:20px">
-                <div class="form-group row ">
-                    <label for="inputFirstName " class="col-md-4 col-sm-4 col-form-label ">First Name</label>
-                    <div class="col-sm-8 ">
-                        <input type="text " class="form-control " id="inputFirstName " placeholder="Enter your First Name " />
-                    </div>
-                </div>
-                <div class="form-group row ">
-                    <label for="inputLastName " class="col-sm-4 col-form-label ">Last Name</label
+        <div class="container-fluid m-10 pt-5 w-50">
+            <h2 class="font-weight-bold">Register</h2>
+            
+            <form class="p-top-2" action="" name="registration">
+                <div class="form-group row">
+                    <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label
             >
-            <div class="col-sm-8 ">
+            <div class="col-sm-10">
               <input
-                type="text "
-                class="form-control "
-                id="inputLastName "
-                placeholder="Enter your Last Name "
+                type="text"
+                class="form-control"
+                id="inputFirstName"
+                placeholder="Enter your First Name"
               />
             </div>
           </div>
-          <div class="form-group row ">
-            <label for="inputEmail " class="col-sm-4 col-form-label "
+          <div class="form-group row">
+            <label for="inputLastName" class="col-sm-2 col-form-label"
+              >Last Name</label
+            >
+            <div class="col-sm-10">
+              <input
+                type="text"
+                class="form-control"
+                id="inputLastName"
+                placeholder="Enter your Last Name"
+              />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail" class="col-sm-2 col-form-label"
               >Email</label
             >
-            <div class="col-sm-8 ">
+            <div class="col-sm-10">
               <input
-                type="email "
-                class="form-control "
-                id="inputEmail "
-                placeholder="Enter your Email "
+                type="email"
+                class="form-control"
+                id="inputEmail"
+                placeholder="Enter your Email"
               />
             </div>
           </div>
-          <div class="form-group row ">
-            <label for="inputUser " class="col-sm-4 col-form-label "
+          <div class="form-group row">
+            <label for="inputUser" class="col-sm-2 col-form-label"
               >Username</label
             >
-            <div class="col-sm-8 ">
+            <div class="col-sm-10">
               <input
-                type="password "
-                class="form-control "
-                id="inputUser "
-                placeholder="Enter your Username "
+                type="password"
+                class="form-control"
+                id="inputUser"
+                placeholder="Enter your Username"
               />
             </div>
           </div>
-          <div class="form-group row ">
-            <label for="inputPassword " class="col-sm-4 col-form-label "
+          <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label"
               >Password</label
             >
-            <div class="col-sm-8 ">
+            <div class="col-sm-10">
               <input
-                type="password "
-                class="form-control "
-                id="inputPassword "
-                placeholder="Enter your Password "
+                type="password"
+                class="form-control"
+                id="inputPassword"
+                placeholder="Enter your Password"
               />
             </div>
           </div>
-          <div class="form-group row ">
-            <label for="inputConfirmPassword " class="col-sm-4 col-form-label "
+          <div class="form-group row">
+            <label for="inputConfirmPassword" class="col-sm-2 col-form-label"
               >Password</label
             >
-            <div class="col-sm-8 ">
+            <div class="col-sm-10">
               <input
-                type="password "
-                class="form-control "
-                id="inputConfirmPassword "
-                placeholder="Confirm your Password "
+                type="password"
+                class="form-control"
+                id="inputConfirmPassword"
+                placeholder="Confirm your Password"
               />
             </div>
           </div>
-          <div class="form-group row ">
-            <div class="form-button col-sm-12 ">
-              <button type="submit " class="btn btn-primary ">Register</button>
+          <div class="form-group row">
+            <div class="form-button col-sm-12">
+              <button type="submit" class="btn btn-primary">Register</button>
             </div>
           </div>
         </form>
@@ -155,39 +158,40 @@
       <!---------------------------------------------------------------------------------------------->
 
       <div
-        class="aside col-lg-6 col-sm-12 py-5 ">
-        <div class = "login-form py-5 ">
-          <h3 class="font-weight-bold " style="padding-top: 30px;">Log In</h3>
-          <form style="padding:20px">
-            <div class="form-group row ">
-              <label for="inputUser " class="col-sm-4 col-form-label "
+        class="d-flex flex-column container-fluid m-10 pt-5 justify-content-center w-50"
+      >
+        <div>
+          <h2 class="font-weight-bold">Log In</h2>
+          <form action="" name="login">
+            <div class="form-group row">
+              <label for="inputUser" class="col-sm-2 col-form-label"
                 >Username</label
               >
-              <div class="col-sm-8 ">
+              <div class="col-sm-10">
                 <input
-                  type="text "
-                  class="form-control "
-                  id="inputUser "
-                  placeholder="Enter your Username "
+                  type="password"
+                  class="form-control w-50"
+                  id="inputUser"
+                  placeholder="Enter your Username"
                 />
               </div>
             </div>
-            <div class="form-group row ">
-              <label for="inputPassword " class="col-sm-4 col-form-label "
+            <div class="form-group row">
+              <label for="inputPassword" class="col-sm-2 col-form-label"
                 >Password</label
               >
-              <div class="col-sm-8 ">
+              <div class="col-sm-10">
                 <input
-                  type="password "
-                  class="form-control "
-                  id="inputPassword "
-                  placeholder="Enter your Password "
+                  type="password"
+                  class="form-control"
+                  id="inputPassword"
+                  placeholder="Enter your Password"
                 />
               </div>
             </div>
-            <div class="form-group row ">
-              <div class="form-button col-sm-12 ">
-                <button type="submit " class="btn btn-primary ">Log in</button>
+            <div class="form-group row">
+              <div class="form-button col-sm-12">
+                <button type="submit" class="btn btn-primary">Log in</button>
               </div>
             </div>
           </form>
@@ -198,91 +202,95 @@
 
     <!-- Footer -->
     <footer>
-      <div class="container ">
-        <div class="about-footer ">
+      <div class="container">
+        <div class="about-footer">
           <h5>About Us</h5>
           <ul>
-            <li><a href="# ">Who We Are</a></li>
-            <li><a href="# ">Our Store</a></li>
-            <li><a href="# ">Stores Near to Me</a></li>
+            <li><a href="#">Who We Are</a></li>
+            <li><a href="#">Our Store</a></li>
+            <li><a href="#">Stores Near to Me</a></li>
           </ul>
         </div>
         <!--End of the First Footer Column-->
 
-        <div class="cart-footer ">
+        <div class="cart-footer">
           <h5>Customer Care</h5>
           <ul>
-            <li><a href="# ">Gift Cards</a></li>
-            <li><a href="# ">Ordering</a></li>
-            <li><a href="# ">Payment</a></li>
-            <li><a href="# ">Shipping</a></li>
-            <li><a href="# ">Returns</a></li>
+            <li><a href="#">Gift Cards</a></li>
+            <li><a href="#">Ordering</a></li>
+            <li><a href="#">Payment</a></li>
+            <li><a href="#">Shipping</a></li>
+            <li><a href="#">Returns</a></li>
           </ul>
         </div>
         <!--End of the Second Footer Column-->
 
         <div class="social-footer">
           <h5>Follow us</h5>
-          <ul>
-          <li><a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
-                 <li> <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a></li>
-              </ul>
-
-      </div>
+          <a href="#"
+            ><i class="fa fa-facebook-square" style="font-size: 30px"></i
+          ></a>
+          <a href="#"
+            ><i class="fa fa-linkedin-square" style="font-size: 30px"></i
+          ></a>
+          <a href="#"
+            ><i class="fa fa-twitter-square" style="font-size: 30px"></i
+          ></a>
+        </div>
         <!--End of the Third Footer Column-->
 
-        <div class="contact-us-footer ">
-          <ul class="contact ">
+        <div class="contact-us-footer">
+          <ul class="contact">
             <h5>Contact Us</h5>
             <li
-              ><a href="# "
-                ><i class="fa fa-envelope " style="font-size: 30px "></i></a>
-                    </li>
-                    <li><a href="# "><i class="fa fa-phone " style="font-size: 30px "></i></a
+              ><a href="#"
+                ><i class="fa fa-envelope" style="font-size: 30px"></i></a
             ></li>
             <li
-              ><a href="# "
-                ><i class="fa fa-map-marker " style="font-size: 30px "></i></a
+              ><a href="#"
+                ><i class="fa fa-phone" style="font-size: 30px"></i></a
+            ></li>
+            <li
+              ><a href="#"
+                ><i class="fa fa-map-marker" style="font-size: 30px"></i></a
             ></li>
           </ul>
         </div>
 
-        <div class="map ">
+        <div class="map">
           <h6>1111, Seymor Street, Vancouver, BC</h6>
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10410.510865752853!2d-123.1152548!3d49.2834511!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4e03bf432e66714!2sBCIT%20Downtown%20Campus!5e0!3m2!1sen!2sca!4v1602882765225!5m2!1sen!2sca "
-            width="230 "
-            height="100 "
-            frameborder="0 "
-            style="border: 0 "
-            allowfullscreen=" "
-            aria-hidden="false "
-            tabindex="0 "
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10410.510865752853!2d-123.1152548!3d49.2834511!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4e03bf432e66714!2sBCIT%20Downtown%20Campus!5e0!3m2!1sen!2sca!4v1602882765225!5m2!1sen!2sca"
+            width="230"
+            height="100"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
           ></iframe>
         </div>
       </div>
       <!-- End of Container Footer -->
 
       <!-- Copyright-->
-      <div class="copyright ">
-          <p class="m-0 text-center text-white ">
-              Copyright &copy; <a href="index.html ">WalkaBooks 2020</a> <br />
-                        <a href="# ">Terms & Conditions</a> | <a href="# ">Privacy Policy </a> |
-                        <a href="# "> Site Map |<a href="credits.html ">Photo Credits</a>
-                        </p>
-            </div>
-            <!-- End of Copyright -->
-            </footer>
-            <!-- End of Footer -->
-            <!--jQuery, Popper.js, and Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js " integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s " crossorigin="anonymous "></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js " integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s " crossorigin="anonymous "></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js "></script>
-            <script src="js/form-validation.js "></script>
-            <script src="js/script.js " async defer></script>
-</body>
-
-</html>
+      <div class="copyright">
+          <p class="m-0 text-center text-white">
+              Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
+              <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
+              <a href="#"> Site Map |<a href="credits.html">Photo Credits</a> 
+          </p>
+      </div>
+      <!-- End of Copyright -->
+    </footer>
+    <!-- End of Footer -->
+        <!--jQuery, Popper.js, and Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+        <script src="js/form-validation.js"></script>
+        <script src="js/script.js" async defer></script> 
+    </body
+></html>
