--- a/books.html
+++ b/books.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>WALKABOOKS</title>
-
     <!--Customized CSS Styling-->
     <link href="css/main.css" rel="stylesheet" />
-
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-
-    <!--jQuery, Popper.js, and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
-
     <!--FontAwesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
@@ -64,16 +53,14 @@
             </div>
         </div>
     </nav>
-
     <main role="main" class="container">
         <!-- Banner -->
         <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
             <img src="images/banner.jpg" class="rounded w-100" alt="Book banner" />
         </div>
-
         <!-- Search Bar for Books -->
         <div class="search-bar">
-            <form class="form-inline" style="justify-content: center; background-color: #d8dce4">
+            <form class="form-inline" style="justify-content: center; background-color: #D8DCE4">
                 <div>
                     <h5 style="padding-top: 5px">Search Books</h5>
                 </div>
@@ -86,13 +73,10 @@
             </form>
         </div>
         <!-- End of Search Bar for Books -->
-
         <br />
-
         <div class="row">
-            <aside class="col-md-4 book-sidebar text-white rounded" style="background-color: #8a9db6">
+            <aside class="col-md-4 book-sidebar text-white rounded" style="background-color: #8A9DB6">
                 <h3 class="text-center" style="margin-top: 10px">Select Sections</h3>
-
                 <div style="width: 80%; padding-left: 20%; margin-top: 20px">
                     <select id="dropdown" name="selection" class="form-control" required>
               <option disabled selected value>Select Your Option</option>
@@ -100,14 +84,12 @@
               <option value="database_essentials">Database Essentials</option>
             </select>
                 </div>
-
                 <div class="p-4 mb-3 mt-3">
                     <h4 class="text-center">For Beginners</h4>
                     <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
                     <br />
                     <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
                 </div>
-
                 <div class="p-4">
                     <h4 class="text-center">Database Essentials</h4>
                     <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
@@ -117,42 +99,35 @@
             </aside>
             <!-- End of Book Sidebar -->
 
-            <div class="p-4 mb-3 mt-3">
-                <h4 class="text-center">For Beginners</h4>
-                <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                <br />
-                <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            </div>
-
-            <div class="p-4">
-                <h4 class="text-center">Database Essentials</h4>
-                <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                <br />
-                <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            </div>
-            </aside>
-            <!-- End of Book Sidebar -->
-
             <!-- Book Display Rows-->
             <div class="col-md-8 book-main">
                 <div class="book-display">
                     <h2 class="book-display-title">For Beginners</h2>
-
                     <div class="card-deck">
                         <div class="card">
                             <img src="images/Coding_for_Beginners.jpg" class="card-img-top" alt="Front-End Frameworks" />
                             <div class="card-body">
                                 <h6 class="card-title">Coding for Beginners</h6>
                                 <p class="card-text">$25</p>
-                                <button href="#" type="button" id="add-btn-1" class="bookcart btn btn-primary">Add to Cart</button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="images/Javascript_for_Beginners.jpg" class="card-img-top" alt="Front-End Database" />
-                            <div class="card-body">
-                                <h6 class="card-title">Javascript for Beginners</h6>
-                                <p class="card-text">$30</p>
-                                <a href="#" type="button" id="add-btn-2" class="bookcart btn btn-primary">Add to Cart</a
+                                <a href="#" type="button" id="add-btn-1" class=" bookcart btn btn-primary">Add to Cart</a
+                  >
+                </div>
+              </div>
+              <div class="card">
+                <img
+                  src="images/Javascript_for_Beginners.jpg"
+                  class="card-img-top"
+                  alt="Javascript_for_Beginners"
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Javascript for Beginners</h6>
+                  <p class="card-text">$30</p>
+                  <a
+                    href="#"
+                    type="button"
+                    id="add-btn-2"
+                    class="bookcart btn btn-primary"
+                    >Add to Cart</a
                   >
                 </div>
               </div>
@@ -174,9 +149,7 @@
             <!-- End of Card-Deck -->
           </div>
           <!-- End of First Row's Book Display -->
-
-                    <br />
-
+          <br />
           <div class="book-display">
             <h2 class="book-display-title">Database Essentials</h2>
             <div class="card-deck">
@@ -234,9 +207,7 @@
       <!-- End of Row -->
     </main>
     <!-- End of Container -->
-
     <br />
-
     <!-- Footer -->
     <footer>
       <div class="container">
@@ -249,7 +220,6 @@
                                 </ul>
                             </div>
                             <!--End of the First Footer Column-->
-
                             <div class="cart-footer">
                                 <h5>Customer Care</h5>
                                 <ul>
@@ -261,7 +231,6 @@
                                 </ul>
                             </div>
                             <!--End of the Second Footer Column-->
-
                             <div class="social-footer">
                                 <h5>Follow us</h5>
                                 <ul>
@@ -284,11 +253,12 @@
           </ul>
         </div>
         <!--End of the Third Footer Column-->
-
-                            <div class="contact-us-footer">
-                                <ul class="contact">
-                                    <h5>Contact Us</h5>
-                                    <li><a href="#"><i class="fa fa-envelope" style="font-size: 30px"></i></a
+        <div class="contact-us-footer">
+          <ul class="contact">
+            <h5>Contact Us</h5>
+            <li
+              ><a href="#"
+                ><i class="fa fa-envelope" style="font-size: 30px"></i></a
             ></li>
             <li
               ><a href="#"
@@ -300,7 +270,6 @@
             ></li>
           </ul>
         </div>
-
         <div class="map">
           <h6>1111, Seymor Street, Vancouver, BC</h6>
           <iframe
@@ -316,7 +285,6 @@
         </div>
       </div>
       <!-- End of Container Footer -->
-
       <!-- Copyright-->
       <div class="copyright">
         <p class="m-0 text-center text-white"
@@ -328,7 +296,6 @@
                             <!-- End of Copyright -->
                             </footer>
                             <!-- End of Footer -->
-
                             <!--Customized JS -->
                             <script src="js/script.js" async defer></script>
                             <!--jQuery, Popper.js, and Bootstrap JS -->
